force-app/main/default/objects/ARTL_VAN_Legal_Entities__mdt/ARTL_VAN_Legal_Entities__mdt.object-meta.xml
<CustomObject>
    <label>VAN Legal Entities</label>
    <pluralLabel>VAN Legal Entities</pluralLabel>
</CustomObject>