force-app/main/default/objects/ARTL_VAN_Legal_Entities__mdt/fields/ARTL_Active__c.field-meta.xml
<CustomField>
    <fullName>ARTL_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>