force-app/main/default/objects/ARTL_VAN_Legal_Entities__mdt/fields/ARTL_Legal_Entity__c.field-meta.xml
<CustomField>
    <fullName>ARTL_Legal_Entity__c</fullName>
    <label>Legal Entity</label>
    <length>4</length>
    <type>Text</type>
</CustomField>