force-app/main/default/objects/ARTL_VAN_Legal_Entities__mdt/fields/ARTL_Legal_Entity_Description__c.field-meta.xml
<CustomField>
    <fullName>ARTL_Legal_Entity_Description__c</fullName>
    <label>Legal Entity Description</label>
    <length>40</length>
    <type>Text</type>
</CustomField>