force-app/main/default/objects/ARTL_VAN_Legal_Entities__mdt/fields/ARTL_Lob_Identifier__c.field-meta.xml
<CustomField>
    <fullName>ARTL_Lob_Identifier__c</fullName>
    <label>Lob Identifier</label>
    <length>1</length>
    <type>Text</type>
</CustomField>