force-app/main/default/objects/ARTL_VAN_Legal_Entities__mdt/listViews/VAN_Legal_Entities.listView-meta.xml
<ListView>
    <fullName>VAN_Legal_Entities</fullName>
    <columns>ARTL_Legal_Entity_Description__c</columns>
    <columns>ARTL_Legal_Entity__c</columns>
    <columns>ARTL_Lob_Identifier__c</columns>
    <columns>ARTL_Active__c</columns>
    <filterScope>Everything</filterScope>
    <label>VAN Legal Entities</label>
</ListView>